# phase_tools-rs

./: .gitignore  CITATION.cff  Cargo.toml  Makefile  README.Rmd  README.md  build.rs  test_byte_identical.sh
.github/workflows/: build.yml
c/: Makefile  README.md  phase_mnv.c
docs/: architecture.md  cli.Rmd  cli.md  contamination_and_ancestry.md  nirvana_benchmark.md  roadmap.md  semantics.md  validation.md
scripts/: build_c_static.sh  build_rust_static.sh  clone_reference_impls.sh  compare_vcfgeno2haplo.sh  compare_whatshap_phase.sh  download_grch37_codon_map.sh  gtf_to_codon_map.py  phase_from_bam_then_mnv.sh  sanitize_vcf_headers.py  unphase_vcf.py
src/: fermi_lite.rs  fermi_lite_bindings.rs  fermi_lite_shim.c  main.rs  mrjd.rs
tests/: byte_identical_synthetic.sh  test_all_sites.sh  test_bam_ancestry.sh  test_bam_contamination.sh  test_bam_error_model.sh  test_bam_phase.sh  test_bcftools_norm.sh  test_fermi_lite.sh  test_multi_region_joint_detect.sh  test_negative.sh  test_output_formats.sh  test_phase_adjudicate.sh  test_phase_compare.sh  test_phase_mnv.sh  test_unphase_vcf.sh
tests/fixtures/: byte_identity.vcf  combined.expected.body.vcf  combined_multiallelic_partial.expected.body.vcf  combined_multiallelic_partial.vcf  combined_multisample.expected.body.vcf  combined_multisample.vcf  combined_multisample_info.expected.body.vcf  combined_multisample_info.vcf  combined_multisample_s2.expected.body.vcf  combined_residual_other_sample_only.expected.body.vcf  combined_residual_other_sample_only.vcf  combined_same_position_records.expected.body.vcf  gap.vcf  (+22 more)
