[package]
name = "phase_tools-rs"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Rust toolkit for phased variant handling, read evidence, BAM error modeling, and contamination probes"
repository = "https://github.com/sounkou-bioinfo/phase_tools-rs"
homepage = "https://github.com/sounkou-bioinfo/phase_tools-rs"
documentation = "https://github.com/sounkou-bioinfo/phase_tools-rs#readme"
readme = "README.md"

[[bin]]
name = "phase_mnv_rs"
path = "src/main.rs"

[dependencies]
rust-htslib = { version = "0.46.0", default-features = false, features = ["static"] }
libc = "0.2"

[build-dependencies]
bindgen = "0.69"
cc = "1.0"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
